--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-d3-cloud": "^0.6.0",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
     "react-sizeme": "^2.5.2",
     "react-sound": "^1.2.0",
