lambda function + api gateway work

--- a/backend/serverless-output.toml
+++ b/backend/serverless-output.toml
@@ -1,5 +1,7 @@
 GraphQlApiUrl = "https://go7u5q3ckfbdbatu3gh3zajnoy.appsync-api.eu-west-2.amazonaws.com/graphql"
-MovieBotLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-MovieBot:1"
+RedirectFuncLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-RedirectFunc:16"
+MovieBotLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-MovieBot:23"
+ServiceEndpoint = "https://2p1pz97s3g.execute-api.eu-west-2.amazonaws.com/dev"
 ServerlessDeploymentBucketName = "chatql-apsync-backend-de-serverlessdeploymentbuck-18eq1n5bqw6cz"
-ChatqlAiProxyLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-chatqlAiProxy:4"
-ChuckBotLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-ChuckBot:1"
+ChatqlAiProxyLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-chatqlAiProxy:26"
+ChuckBotLambdaFunctionQualifiedArn = "arn:aws:lambda:eu-west-2:180951574562:function:chatql-apsync-backend-dev-ChuckBot:23"
