--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ amplify/backend/amplify-meta.json
 aws-exports.js
 awsconfiguration.json
 
-backend/.serverless
+backend/serverless/.serverless
 backend/terraform/.terraform
 backend/terraform/terraform.tfstate*
 
